fix: button spacing artist page

--- a/comps/artists/md.module.css
+++ b/comps/artists/md.module.css
@@ -41,6 +41,16 @@
     margin: 0;
   }
 }
+@media(min-width: 1600px) {
+  .md,
+  .md h1,
+  .md h2,
+  .md h3,
+  .md p {
+    width: 700px;
+    max-width: 700px;
+  }
+}
 @media(min-width: 3000px) {
   .md,
   .md h1,
